--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
+  cursor: url('/public/cursor/love.png'),auto;
+
 }
 
 code {
@@ -32,6 +34,7 @@ div.subtitle{
   width: 100%;
   height: 100px; /* Adjust height as needed */
   overflow: hidden;
+  cursor: url('/public/cursor/love.png');
 }
 
 .lyric {
